--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     <link rel="alternate" hreflang="ru" href="https://lexalaw.eu?lang=ru" />
     <link rel="alternate" hreflang="uk" href="https://lexalaw.eu?lang=uk" />
     <link rel="alternate" hreflang="x-default" href="https://lexalaw.eu" />
-    <link rel="canonical" href="https://lexalaw.eu" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -114,6 +113,9 @@
           <!-- Mobile Menu Toggle -->
           <button
             id="menu-btn"
+            aria-label="Toggle Menu"
+            title="Menu"
+            role="button"
             class="text-gray-700 focus:outline-none mr-4 md:hidden"
           >
             <svg
@@ -607,6 +609,9 @@
               type="submit"
               class="w-full bg-blue-600 text-white py-2 rounded-lg"
               id="contact-button"
+              aria-label="Envoyer le formulaire"
+              title="Envoyer"
+              role="button"
               class="g-recaptcha"
               data-sitekey="6LdtZJgrAAAAALup6_dPeoXOmqG1TKjzYxT9cSQs"
               data-callback="onSubmit"
