--- a/index.html
+++ b/index.html
@@ -160,12 +160,20 @@
     </nav>
 
     <!-- Hero Section -->
-    <section
-      class="bg-cover bg-center h-96 mt-16"
-      style="background-image: url('images/law-firm-lexalaw-hero.jpg')"
-    >
-      <div class="container mx-auto h-full flex items-center justify-center">
-        <div class="bg-white bg-opacity-75 p-8 rounded shadow-md text-center">
+    <section class="relative h-96 mt-16">
+      <img
+        src="images/law-firm-lexalaw-hero.jpg"
+        alt="Cabinet Lexalaw"
+        width="1920"
+        height="400"
+        class="absolute inset-0 w-full h-full object-cover"
+        loading="eager"
+        fetchpriority="high"
+      />
+      <div
+        class="absolute inset-0 bg-white bg-opacity-75 flex items-center justify-center"
+      >
+        <div class="p-8 rounded shadow-md text-center">
           <h1 class="text-4xl font-bold mb-4" id="hero-title">
             Bienvenue chez Lexalaw
           </h1>
@@ -190,10 +198,13 @@
           >
             <img
               src="images/contentieux-commercial-international.jpg"
-              alt="Contentieux Commercial International"
+              alt="Illustration Contentieux Commercial International"
+              width="400"
+              height="200"
               class="w-full h-48 object-cover rounded-lg"
               id="service1-img"
               loading="lazy"
+              fetchpriority="low"
             />
             <h3 class="text-2xl font-bold mt-4" id="service1-title">
               Contentieux Commercial International
@@ -212,10 +223,13 @@
           >
             <img
               src="images/droit-du-sport.jpg"
-              alt="Droit du Sport"
+              alt="Illustration Droit du Sport"
+              width="400"
+              height="200"
               class="w-full h-48 object-cover rounded-lg"
               id="service2-img"
               loading="lazy"
+              fetchpriority="low"
             />
             <h3 class="text-2xl font-bold mt-4" id="service2-title">
               Droit du Sport
@@ -233,10 +247,13 @@
           >
             <img
               src="images/confiscations-saisies.jpg"
-              alt="Confiscations & Saisies"
+              alt="Illustration Confiscations & Saisies"
+              width="400"
+              height="200"
               class="w-full h-48 object-cover rounded-lg"
               id="service3-img"
               loading="lazy"
+              fetchpriority="low"
             />
             <h3 class="text-2xl font-bold mt-4" id="service3-title">
               Confiscations & Saisies
@@ -254,10 +271,13 @@
           >
             <img
               src="images/sanctions-internationales.jpg"
-              alt="Sanctions Internationales"
+              alt="Illustration Sanctions Internationales"
+              width="400"
+              height="200"
               class="w-full h-48 object-cover rounded-lg"
               id="service4-img"
               loading="lazy"
+              fetchpriority="low"
             />
             <h3 class="text-2xl font-bold mt-4" id="service4-title">
               Sanctions Internationales
@@ -275,10 +295,13 @@
           >
             <img
               src="images/entraide-judiciaire-extradition.jpg"
-              alt="Entraide Judiciaire & Extradition"
+              alt="Illustration Entraide Judiciaire & Extradition"
+              width="400"
+              height="200"
               class="w-full h-48 object-cover rounded-lg"
               id="service5-img"
               loading="lazy"
+              fetchpriority="low"
             />
             <h3 class="text-2xl font-bold mt-4" id="service5-title">
               Entraide Judiciaire & Extradition
@@ -296,10 +319,13 @@
           >
             <img
               src="images/execution-arbitrage.jpg"
-              alt="Exécution de Jugements & Arbitrage"
+              alt="Illustration Exécution de Jugements & Arbitrage"
+              width="400"
+              height="200"
               class="w-full h-48 object-cover rounded-lg"
               id="service6-img"
               loading="lazy"
+              fetchpriority="low"
             />
             <h3 class="text-2xl font-bold mt-4" id="service6-title">
               Exécution de Jugements & Arbitrage
@@ -316,10 +342,13 @@
           >
             <img
               src="images/droit-etrangers.jpg"
-              alt="Droit des Étrangers"
+              alt="Illustration Droit des Étrangers"
+              width="400"
+              height="200"
               class="w-full h-48 object-cover rounded-lg"
               id="service7-img"
               loading="lazy"
+              fetchpriority="low"
             />
             <h3 class="text-2xl font-bold mt-4" id="service7-title">
               Droit des Étrangers
@@ -336,10 +365,13 @@
           >
             <img
               src="images/blockchain-cryptomonnaies.jpg"
-              alt="Blockchain & Cryptomonnaies"
+              alt="Illustration Blockchain & Cryptomonnaies"
+              width="400"
+              height="200"
               class="w-full h-48 object-cover rounded-lg"
               id="service8-img"
               loading="lazy"
+              fetchpriority="low"
             />
             <h3 class="text-2xl font-bold mt-4" id="service8-title">
               Blockchain & Cryptomonnaies
@@ -357,10 +389,13 @@
           >
             <img
               src="images/droit-penal.jpg"
-              alt="Droit Pénal"
+              alt="Illustration Droit Pénal"
+              width="400"
+              height="200"
               class="w-full h-48 object-cover rounded-lg"
               id="service9-img"
               loading="lazy"
+              fetchpriority="low"
             />
             <h3 class="text-2xl font-bold mt-4" id="service9-title">
               Droit Pénal
@@ -378,10 +413,13 @@
           >
             <img
               src="images/droit-famille.jpg"
-              alt="Droit de la Famille"
+              alt="Illustration Droit de la Famille"
+              width="400"
+              height="200"
               class="w-full h-48 object-cover rounded-lg"
               id="service10-img"
               loading="lazy"
+              fetchpriority="low"
             />
             <h3 class="text-2xl font-bold mt-4" id="service10-title">
               Droit de la Famille
@@ -399,10 +437,13 @@
           >
             <img
               src="images/droit-monaco.jpg"
-              alt="Droit à Monaco"
+              alt="Illustration Droit à Monaco"
+              width="400"
+              height="200"
               class="w-full h-48 object-cover rounded-lg"
               id="service11-img"
               loading="lazy"
+              fetchpriority="low"
             />
             <h3 class="text-2xl font-bold mt-4" id="service11-title">
               Droit à Monaco
@@ -426,9 +467,12 @@
         <div class="flex flex-col md:flex-row items-center">
           <img
             src="images/lexalaw-team.jpg"
-            alt=""
+            alt="Photo de l'équipe Lexalaw"
+            width="600"
+            height="256"
             id="about-img"
             loading="lazy"
+            fetchpriority="low"
             class="w-full md:w-1/2 h-64 object-cover rounded-lg"
           />
           <div class="md:ml-8 mt-8 md:mt-0">
