--- a/index.html
+++ b/index.html
@@ -89,12 +89,15 @@
         class="container mx-auto px-4 py-4 flex justify-between items-center"
       >
         <div class="flex items-center">
-          <img
-            src="images/lexalaw-logo.png"
-            alt="Lexalaw Logo"
-            loading="lazy"
-            class="h-10 w-10 mr-2"
-          />
+          <picture>
+            <source srcset="images/lexalaw-logo.webp" type="image/webp" />
+            <img
+              src="images/lexalaw-logo.png"
+              alt="Lexalaw Logo"
+              loading="lazy"
+              class="h-10 w-10 mr-2"
+            />
+          </picture>
           <a href="#" class="text-xl font-bold text-blue-950" id="site-title"
             >LEXALAW</a
           >
@@ -161,15 +164,19 @@
 
     <!-- Hero Section -->
     <section class="relative h-96 mt-16">
-      <img
-        src="images/law-firm-lexalaw-hero.jpg"
-        alt="Cabinet Lexalaw"
-        width="1920"
-        height="400"
-        class="absolute inset-0 w-full h-full object-cover"
-        loading="eager"
-        fetchpriority="high"
-      />
+      <picture>
+        <source srcset="images/law-firm-lexalaw-hero.webp" type="image/webp" />
+        <img
+          src="images/law-firm-lexalaw-hero.jpg"
+          alt="Cabinet Lexalaw"
+          width="1920"
+          height="400"
+          class="absolute inset-0 w-full h-full object-cover"
+          loading="eager"
+          decoding="async"
+          fetchpriority="high"
+        />
+      </picture>
       <div
         class="absolute inset-0 bg-white bg-opacity-75 flex items-center justify-center"
       >
@@ -196,16 +203,22 @@
           <div
             class="bg-white p-6 rounded-lg shadow-md transition-transform duration-300 ease-in-out hover:shadow-lg hover:scale-105"
           >
-            <img
-              src="images/contentieux-commercial-international.jpg"
-              alt="Illustration Contentieux Commercial International"
-              width="400"
-              height="200"
-              class="w-full h-48 object-cover rounded-lg"
-              id="service1-img"
-              loading="lazy"
-              fetchpriority="low"
-            />
+            <picture>
+              <source
+                srcset="images/contentieux-commercial-international.webp"
+                type="image/webp"
+              />
+              <img
+                src="images/contentieux-commercial-international.jpg"
+                alt="Illustration Contentieux Commercial International"
+                width="400"
+                height="200"
+                class="w-full h-48 object-cover rounded-lg"
+                id="service1-img"
+                loading="lazy"
+                fetchpriority="low"
+              />
+            </picture>
             <h3 class="text-2xl font-bold mt-4" id="service1-title">
               Contentieux Commercial International
             </h3>
@@ -221,16 +234,19 @@
           <div
             class="bg-white p-6 rounded-lg shadow-md transition-transform duration-300 ease-in-out hover:shadow-lg hover:scale-105"
           >
-            <img
-              src="images/droit-du-sport.jpg"
-              alt="Illustration Droit du Sport"
-              width="400"
-              height="200"
-              class="w-full h-48 object-cover rounded-lg"
-              id="service2-img"
-              loading="lazy"
-              fetchpriority="low"
-            />
+            <picture>
+              <source srcset="images/droit-du-sport.webp" type="image/webp" />
+              <img
+                src="images/droit-du-sport.jpg"
+                alt="Illustration Droit du Sport"
+                width="400"
+                height="200"
+                class="w-full h-48 object-cover rounded-lg"
+                id="service2-img"
+                loading="lazy"
+                fetchpriority="low"
+              />
+            </picture>
             <h3 class="text-2xl font-bold mt-4" id="service2-title">
               Droit du Sport
             </h3>
@@ -245,16 +261,22 @@
           <div
             class="bg-white p-6 rounded-lg shadow-md transition-transform duration-300 ease-in-out hover:shadow-lg hover:scale-105"
           >
-            <img
-              src="images/confiscations-saisies.jpg"
-              alt="Illustration Confiscations & Saisies"
-              width="400"
-              height="200"
-              class="w-full h-48 object-cover rounded-lg"
-              id="service3-img"
-              loading="lazy"
-              fetchpriority="low"
-            />
+            <picture>
+              <source
+                srcset="images/confiscations-saisies.webp"
+                type="image/webp"
+              />
+              <img
+                src="images/confiscations-saisies.jpg"
+                alt="Illustration Confiscations & Saisies"
+                width="400"
+                height="200"
+                class="w-full h-48 object-cover rounded-lg"
+                id="service3-img"
+                loading="lazy"
+                fetchpriority="low"
+              />
+            </picture>
             <h3 class="text-2xl font-bold mt-4" id="service3-title">
               Confiscations & Saisies
             </h3>
@@ -269,16 +291,22 @@
           <div
             class="bg-white p-6 rounded-lg shadow-md transition-transform duration-300 ease-in-out hover:shadow-lg hover:scale-105"
           >
-            <img
-              src="images/sanctions-internationales.jpg"
-              alt="Illustration Sanctions Internationales"
-              width="400"
-              height="200"
-              class="w-full h-48 object-cover rounded-lg"
-              id="service4-img"
-              loading="lazy"
-              fetchpriority="low"
-            />
+            <picture>
+              <source
+                srcset="images/sanctions-internationales.webp"
+                type="image/webp"
+              />
+              <img
+                src="images/sanctions-internationales.jpg"
+                alt="Illustration Sanctions Internationales"
+                width="400"
+                height="200"
+                class="w-full h-48 object-cover rounded-lg"
+                id="service4-img"
+                loading="lazy"
+                fetchpriority="low"
+              />
+            </picture>
             <h3 class="text-2xl font-bold mt-4" id="service4-title">
               Sanctions Internationales
             </h3>
@@ -293,16 +321,22 @@
           <div
             class="bg-white p-6 rounded-lg shadow-md transition-transform duration-300 ease-in-out hover:shadow-lg hover:scale-105"
           >
-            <img
-              src="images/entraide-judiciaire-extradition.jpg"
-              alt="Illustration Entraide Judiciaire & Extradition"
-              width="400"
-              height="200"
-              class="w-full h-48 object-cover rounded-lg"
-              id="service5-img"
-              loading="lazy"
-              fetchpriority="low"
-            />
+            <picture>
+              <source
+                srcset="images/entraide-judiciaire-extradition.webp"
+                type="image/webp"
+              />
+              <img
+                src="images/entraide-judiciaire-extradition.jpg"
+                alt="Illustration Entraide Judiciaire & Extradition"
+                width="400"
+                height="200"
+                class="w-full h-48 object-cover rounded-lg"
+                id="service5-img"
+                loading="lazy"
+                fetchpriority="low"
+              />
+            </picture>
             <h3 class="text-2xl font-bold mt-4" id="service5-title">
               Entraide Judiciaire & Extradition
             </h3>
@@ -317,16 +351,22 @@
           <div
             class="bg-white p-6 rounded-lg shadow-md transition-transform duration-300 ease-in-out hover:shadow-lg hover:scale-105"
           >
-            <img
-              src="images/execution-arbitrage.jpg"
-              alt="Illustration Exécution de Jugements & Arbitrage"
-              width="400"
-              height="200"
-              class="w-full h-48 object-cover rounded-lg"
-              id="service6-img"
-              loading="lazy"
-              fetchpriority="low"
-            />
+            <picture>
+              <source
+                srcset="images/execution-arbitrage.webp"
+                type="image/webp"
+              />
+              <img
+                src="images/execution-arbitrage.jpg"
+                alt="Illustration Exécution de Jugements & Arbitrage"
+                width="400"
+                height="200"
+                class="w-full h-48 object-cover rounded-lg"
+                id="service6-img"
+                loading="lazy"
+                fetchpriority="low"
+              />
+            </picture>
             <h3 class="text-2xl font-bold mt-4" id="service6-title">
               Exécution de Jugements & Arbitrage
             </h3>
@@ -340,16 +380,19 @@
           <div
             class="bg-white p-6 rounded-lg shadow-md transition-transform duration-300 ease-in-out hover:shadow-lg hover:scale-105"
           >
-            <img
-              src="images/droit-etrangers.jpg"
-              alt="Illustration Droit des Étrangers"
-              width="400"
-              height="200"
-              class="w-full h-48 object-cover rounded-lg"
-              id="service7-img"
-              loading="lazy"
-              fetchpriority="low"
-            />
+            <picture>
+              <source srcset="images/droit-etrangers.webp" type="image/webp" />
+              <img
+                src="images/droit-etrangers.jpg"
+                alt="Illustration Droit des Étrangers"
+                width="400"
+                height="200"
+                class="w-full h-48 object-cover rounded-lg"
+                id="service7-img"
+                loading="lazy"
+                fetchpriority="low"
+              />
+            </picture>
             <h3 class="text-2xl font-bold mt-4" id="service7-title">
               Droit des Étrangers
             </h3>
@@ -363,16 +406,22 @@
           <div
             class="bg-white p-6 rounded-lg shadow-md transition-transform duration-300 ease-in-out hover:shadow-lg hover:scale-105"
           >
-            <img
-              src="images/blockchain-cryptomonnaies.jpg"
-              alt="Illustration Blockchain & Cryptomonnaies"
-              width="400"
-              height="200"
-              class="w-full h-48 object-cover rounded-lg"
-              id="service8-img"
-              loading="lazy"
-              fetchpriority="low"
-            />
+            <picture>
+              <source
+                srcset="images/blockchain-cryptomonnaies.webp"
+                type="image/webp"
+              />
+              <img
+                src="images/blockchain-cryptomonnaies.jpg"
+                alt="Illustration Blockchain & Cryptomonnaies"
+                width="400"
+                height="200"
+                class="w-full h-48 object-cover rounded-lg"
+                id="service8-img"
+                loading="lazy"
+                fetchpriority="low"
+              />
+            </picture>
             <h3 class="text-2xl font-bold mt-4" id="service8-title">
               Blockchain & Cryptomonnaies
             </h3>
@@ -387,16 +436,19 @@
           <div
             class="bg-white p-6 rounded-lg shadow-md transition-transform duration-300 ease-in-out hover:shadow-lg hover:scale-105"
           >
-            <img
-              src="images/droit-penal.jpg"
-              alt="Illustration Droit Pénal"
-              width="400"
-              height="200"
-              class="w-full h-48 object-cover rounded-lg"
-              id="service9-img"
-              loading="lazy"
-              fetchpriority="low"
-            />
+            <picture>
+              <source srcset="images/droit-penal.webp" type="image/webp" />
+              <img
+                src="images/droit-penal.jpg"
+                alt="Illustration Droit Pénal"
+                width="400"
+                height="200"
+                class="w-full h-48 object-cover rounded-lg"
+                id="service9-img"
+                loading="lazy"
+                fetchpriority="low"
+              />
+            </picture>
             <h3 class="text-2xl font-bold mt-4" id="service9-title">
               Droit Pénal
             </h3>
@@ -411,16 +463,19 @@
           <div
             class="bg-white p-6 rounded-lg shadow-md transition-transform duration-300 ease-in-out hover:shadow-lg hover:scale-105"
           >
-            <img
-              src="images/droit-famille.jpg"
-              alt="Illustration Droit de la Famille"
-              width="400"
-              height="200"
-              class="w-full h-48 object-cover rounded-lg"
-              id="service10-img"
-              loading="lazy"
-              fetchpriority="low"
-            />
+            <picture>
+              <source srcset="images/droit-famille.webp" type="image/webp" />
+              <img
+                src="images/droit-famille.jpg"
+                alt="Illustration Droit de la Famille"
+                width="400"
+                height="200"
+                class="w-full h-48 object-cover rounded-lg"
+                id="service10-img"
+                loading="lazy"
+                fetchpriority="low"
+              />
+            </picture>
             <h3 class="text-2xl font-bold mt-4" id="service10-title">
               Droit de la Famille
             </h3>
@@ -435,16 +490,19 @@
           <div
             class="bg-white p-6 rounded-lg shadow-md transition-transform duration-300 ease-in-out hover:shadow-lg hover:scale-105"
           >
-            <img
-              src="images/droit-monaco.jpg"
-              alt="Illustration Droit à Monaco"
-              width="400"
-              height="200"
-              class="w-full h-48 object-cover rounded-lg"
-              id="service11-img"
-              loading="lazy"
-              fetchpriority="low"
-            />
+            <picture>
+              <source srcset="images/droit-monaco.webp" type="image/webp" />
+              <img
+                src="images/droit-monaco.jpg"
+                alt="Illustration Droit à Monaco"
+                width="400"
+                height="200"
+                class="w-full h-48 object-cover rounded-lg"
+                id="service11-img"
+                loading="lazy"
+                fetchpriority="low"
+              />
+            </picture>
             <h3 class="text-2xl font-bold mt-4" id="service11-title">
               Droit à Monaco
             </h3>
@@ -465,16 +523,19 @@
           👥 À propos de nous
         </h2>
         <div class="flex flex-col md:flex-row items-center">
-          <img
-            src="images/lexalaw-team.jpg"
-            alt="Photo de l'équipe Lexalaw"
-            width="600"
-            height="256"
-            id="about-img"
-            loading="lazy"
-            fetchpriority="low"
-            class="w-full md:w-1/2 h-64 object-cover rounded-lg"
-          />
+          <picture>
+            <source srcset="images/lexalaw-team.webp" type="image/webp" />
+            <img
+              src="images/lexalaw-team.jpg"
+              alt="Photo de l'équipe Lexalaw"
+              width="600"
+              height="256"
+              id="about-img"
+              loading="lazy"
+              fetchpriority="low"
+              class="w-full md:w-1/2 h-64 object-cover rounded-lg"
+            />
+          </picture>
           <div class="md:ml-8 mt-8 md:mt-0">
             <p class="text-lg" id="about-text1">
               Lexalaw est dédié à fournir des services juridiques de haute
