--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
         />
       </picture>
       <div
-        class="absolute inset-0 bg-white bg-opacity-75 flex items-center justify-center"
+        class="absolute inset-0 bg-white bg-opacity-70 flex items-center justify-center"
       >
-        <div class="p-8 rounded shadow-md text-center">
+        <div class="p-8 text-center">
           <h1 class="text-4xl font-bold mb-4" id="hero-title">
             Bienvenue chez Lexalaw
           </h1>
@@ -520,7 +520,8 @@
     <section id="about" class="bg-white py-16">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-12" id="about-title">
-          👥 À propos de nous
+          👥 Un cabinet d’avocats international engagé pour la défense de vos
+          droits
         </h2>
         <div class="flex flex-col md:flex-row items-center">
           <picture>
@@ -529,11 +530,11 @@
               src="images/lexalaw-team.jpg"
               alt="Photo de l'équipe Lexalaw"
               width="600"
-              height="256"
+              height="400"
               id="about-img"
               loading="lazy"
               fetchpriority="low"
-              class="w-full md:w-1/2 h-64 object-cover rounded-lg"
+              class="w-full md:max-w-md md:h-auto object-contain rounded-lg"
             />
           </picture>
           <div class="md:ml-8 mt-8 md:mt-0">
@@ -729,18 +730,6 @@
         </div>
       </div>
     </section>
-
-    <!-- SEO Text Section -->
-    <!-- <section id="seo-text" class="bg-white py-12 border-t border-gray-200">
-      <div class="container mx-auto px-4 max-w-5xl">
-        <h2 class="text-2xl font-bold mb-4" id="seo-text-title"></h2>
-        <p
-          class="text-gray-800 leading-relaxed mb-4"
-          id="seo-text-paragraph1"
-        ></p>
-        <p class="text-gray-800 leading-relaxed" id="seo-text-paragraph2"></p>
-      </div>
-    </section> -->
 
     <!-- Footer -->
     <footer class="bg-white py-6">
