Dynamize og meta properties

--- a/index.html
+++ b/index.html
@@ -67,14 +67,8 @@
 
       gtag('config', 'G-90BNN49EWZ');
     </script>
-    <meta
-      property="og:title"
-      content="Lexalaw | Cabinet d’avocats multilingue"
-    />
-    <meta
-      property="og:description"
-      content="Droit international, pénal, de la famille et des étrangers."
-    />
+    <meta property="og:title" content="" id="og-title" />
+    <meta property="og:description" content="" id="og-description" />
     <meta property="og:url" content="https://lexalaw.eu" />
     <meta
       property="og:image"
