--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         display: block;
       }
     </style>
+    <link rel="canonical" href="https://lexalaw.eu" />
     <link rel="alternate" hreflang="fr" href="https://lexalaw.eu?lang=fr" />
     <link rel="alternate" hreflang="en" href="https://lexalaw.eu?lang=en" />
     <link rel="alternate" hreflang="ru" href="https://lexalaw.eu?lang=ru" />
