Fix layout shift

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
       content="https://lexalaw.eu/images/lexalaw-logo.png"
     />
   </head>
-  <body class="bg-gray-100 text-gray-900 min-h-screen overflow-x-hidden">
+  <body
+    class="bg-gray-100 text-gray-900 min-h-screen overflow-x-hidden overflow-y-scroll transition-none"
+  >
     <!-- Navbar -->
     <nav class="bg-white shadow-md fixed top-0 left-0 w-full z-50">
       <div
