Fix body layout shift

--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
       name="keywords"
       content="avocat international, avocat pénaliste, droit des étrangers, avocat divorce, avocat sanctions européennes, avocat Monaco, avocat crypto, avocat blockchain, cabinet multilingue, Lexalaw, contentieux transfrontalier, avocat droit de la famille, avocat immigration, droit international public, droit international privé"
     />
-    <link
-      href="./dist/main.min.css"
-      rel="preload"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet'"
-    />
-    <noscript>
-      <link href="./dist/main.min.css" rel="stylesheet" />
-    </noscript>
+    <link href="./dist/main.min.css" rel="stylesheet" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -105,6 +97,8 @@
               alt="Lexalaw Logo"
               loading="lazy"
               class="h-10 w-10 mr-2"
+              width="40"
+              height="40"
             />
           </picture>
           <a href="#" class="text-xl font-bold text-blue-950" id="site-title"
